[gd_scene load_steps=33 format=2]

[ext_resource path="res://Fonts/Font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/ActiveFigure.gd" type="Script" id=2]
[ext_resource path="res://Scripts/GameBoard.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=4]
[ext_resource path="res://Scripts/NextFigureBoard.gd" type="Script" id=5]
[ext_resource path="res://addons/godot_sfxr/SfxrStreamPlayer.gd" type="Script" id=6]
[ext_resource path="res://Sprites/pause_buttons.png" type="Texture" id=7]
[ext_resource path="res://Sprites/restart_buttons.png" type="Texture" id=8]
[ext_resource path="res://Sprites/foreground.png" type="Texture" id=9]
[ext_resource path="res://Sprites/background.png" type="Texture" id=10]
[ext_resource path="res://Sprites/menu_buttons.png" type="Texture" id=11]
[ext_resource path="res://Sounds/change_level.tres" type="AudioStream" id=12]
[ext_resource path="res://Sounds/theme_music.wav" type="AudioStream" id=13]
[ext_resource path="res://Sounds/kick1.wav" type="AudioStream" id=14]
[ext_resource path="res://Sounds/click.tres" type="AudioStream" id=15]
[ext_resource path="res://Sounds/tick1.wav" type="AudioStream" id=16]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 11 )
region = Rect2( 270, 8, 64, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 11 )
region = Rect2( 270, 40, 64, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 11 )
region = Rect2( 270, 24, 64, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 7 )
region = Rect2( 110, 8, 64, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 7 )
region = Rect2( 110, 40, 64, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 7 )
region = Rect2( 110, 24, 64, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 8 )
region = Rect2( 174, 8, 96, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 8 )
region = Rect2( 174, 40, 96, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 8 )
region = Rect2( 174, 24, 96, 16 )

[sub_resource type="Animation" id=9]
resource_name = "level_changed"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Control/Level:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 2, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "scores&lines_changed"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Control/Scores:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 2, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/Lines:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 2, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "block_placed"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 0.25, 0.011438, 0.112656, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -3 ), Vector2( 0, 3 ), Vector2( 0, -1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "sweeped1"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 0.03983, 0.0824693, 0.0796602, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( -1, 0 ), Vector2( 1, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "sweeped2"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 0.03983, 0.0824693, 0.0796602, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 2, 0 ), Vector2( -2, 0 ), Vector2( 2, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "sweeped3"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 0.03983, 0.0824693, 0.0796602, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 3, -1 ), Vector2( -3, 1 ), Vector2( 3, -1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "sweeped4"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 0.03983, 0.0824693, 0.0796602, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 4, 1 ), Vector2( -4, -2 ), Vector2( 4, 3 ), Vector2( 0, 0 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 10 )
centered = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]
offset = Vector2( 0, -1 )
transform = Transform2D( 1, 0, 0, 1, 0, -1 )
follow_viewport_enable = true

[node name="Control" type="Control" parent="CanvasLayer"]
margin_right = 360.0
margin_bottom = 360.0

[node name="MenuButton" type="TextureButton" parent="CanvasLayer/Control"]
margin_left = 288.0
margin_top = 27.0
margin_right = 352.0
margin_bottom = 42.0
texture_normal = SubResource( 1 )
texture_pressed = SubResource( 2 )
texture_hover = SubResource( 3 )

[node name="PauseButton" type="TextureButton" parent="CanvasLayer/Control"]
margin_left = 271.0
margin_top = 297.0
margin_right = 335.0
margin_bottom = 312.0
texture_normal = SubResource( 11 )
texture_pressed = SubResource( 12 )
texture_hover = SubResource( 13 )

[node name="RestartButton" type="TextureButton" parent="CanvasLayer/Control"]
margin_left = 239.0
margin_top = 329.0
margin_right = 335.0
margin_bottom = 345.0
texture_normal = SubResource( 14 )
texture_pressed = SubResource( 15 )
texture_hover = SubResource( 16 )

[node name="PauseLabel" type="Label" parent="CanvasLayer/Control"]
modulate = Color( 1, 0.968627, 0.937255, 1 )
anchor_bottom = 0.413
margin_left = 14.0
margin_top = 25.0
margin_right = 74.0
margin_bottom = -106.68
rect_clip_content = true
custom_fonts/font = ExtResource( 1 )
text = "PAUSED"

[node name="TimeAmount" type="Label" parent="CanvasLayer/Control"]
modulate = Color( 1, 0.968627, 0.937255, 1 )
anchor_bottom = 0.413
margin_left = 206.0
margin_top = 265.0
margin_right = 303.0
margin_bottom = 133.32
rect_clip_content = true
custom_fonts/font = ExtResource( 1 )
text = "00:00:00"
align = 1

[node name="Scores" type="Control" parent="CanvasLayer/Control"]
margin_left = 192.0
margin_top = 153.0
margin_right = 319.0
margin_bottom = 169.0

[node name="Name" type="Label" parent="CanvasLayer/Control/Scores"]
modulate = Color( 1, 0.968627, 0.937255, 1 )
anchor_bottom = 0.413
margin_right = 60.0
margin_bottom = 10.392
rect_clip_content = true
custom_fonts/font = ExtResource( 1 )
text = "SCORES"

[node name="Value" type="Label" parent="CanvasLayer/Control/Scores"]
modulate = Color( 1, 0.968627, 0.937255, 1 )
margin_left = 63.0
margin_right = 160.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 1 )
text = "000000000"
align = 1

[node name="Lines" type="Control" parent="CanvasLayer/Control"]
margin_left = 192.0
margin_top = 184.0
margin_right = 319.0
margin_bottom = 200.0

[node name="Name" type="Label" parent="CanvasLayer/Control/Lines"]
modulate = Color( 1, 0.968627, 0.937255, 1 )
margin_right = 46.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 1 )
text = "LINES"

[node name="Value" type="Label" parent="CanvasLayer/Control/Lines"]
modulate = Color( 1, 0.968627, 0.937255, 1 )
margin_left = 50.0
margin_right = 100.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 1 )
text = "0000"

[node name="Level" type="Control" parent="CanvasLayer/Control"]
margin_left = 223.0
margin_top = 216.0
margin_right = 350.0
margin_bottom = 232.0
rect_scale = Vector2( 0.9, 0.9 )

[node name="Name" type="Label" parent="CanvasLayer/Control/Level"]
modulate = Color( 1, 0.968627, 0.937255, 1 )
margin_left = 2.22223
margin_right = 52.2222
margin_bottom = 17.0
custom_fonts/font = ExtResource( 1 )
text = "LEVEL"

[node name="Value" type="Label" parent="CanvasLayer/Control/Level"]
modulate = Color( 1, 0.968627, 0.937255, 1 )
margin_left = 53.0
margin_right = 93.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 1 )
text = "0000"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
anims/level_changed = SubResource( 9 )
anims/scores&lines_changed = SubResource( 10 )

[node name="GameBoard" type="Node2D" parent="."]
position = Vector2( 14, 8 )
script = ExtResource( 3 )

[node name="NextFigureBoard" type="Node2D" parent="."]
position = Vector2( 198, 32 )
script = ExtResource( 5 )

[node name="ActiveFigure" type="Node2D" parent="."]
position = Vector2( 62, 24 )
script = ExtResource( 2 )

[node name="Foreground" type="Sprite" parent="."]
texture = ExtResource( 9 )
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/block_placed = SubResource( 4 )
anims/sweeped1 = SubResource( 5 )
anims/sweeped2 = SubResource( 6 )
anims/sweeped3 = SubResource( 7 )
anims/sweeped4 = SubResource( 8 )

[node name="ThemeMusicAudioStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -3.496
mix_target = 2
bus = "Music"

[node name="SwipeSoundAudioStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -7.864
pitch_scale = 0.33
bus = "Effects"

[node name="ClickSoundAudioStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -20.099
pitch_scale = 0.33
bus = "Effects"

[node name="LevelChangeSoundAudioStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -17.477
pitch_scale = 0.33
bus = "Effects"

[node name="TickSoundAudioStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -10.485
pitch_scale = 0.16
bus = "Effects"

[node name="SfxrStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -17.408
pitch_scale = 0.44
script = ExtResource( 6 )
wave/type = 1
sample_params/sound_vol = 0.25
sample_params/sample_rate = 44100.0
envelope/attack_time = 0.0
envelope/sustain_time = 0.0041007
envelope/punch_time = 0.0
envelope/decay_time = 0.0493412
frequency/start_frequency = 0.906541
frequency/min_freq_cutoff = 0.0
frequency/slide = -0.373663
frequency/delta_slide = 0.0
vibrato/depth = 0.0
vibrato/speed = 0.0
arpeggiation/frequency_mult = 0.0
arpeggiation/change_speed = 0.0
duty_cycle/duty_cycle = 1.0
duty_cycle/sweep = 0.0
retrigger/rate = 0.0
flanger/offset = 0.0
flanger/sweep = 0.0
low_pass_filter/cutoff_frequency = 1.0
low_pass_filter/cutoff_sweep = 0.0
low_pass_filter/resonance = 0.0
high_pass_filter/cutoff_frequency = 0.978934
high_pass_filter/cutoff_sweep = 0.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="ActiveFigure" method="_on_Timer_timeout"]
[connection signal="pressed" from="CanvasLayer/Control/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="block_placed" from="ActiveFigure" to="." method="_on_ActiveFigure_block_placed"]
[connection signal="blocks_sweeped" from="ActiveFigure" to="." method="_on_ActiveFigure_blocks_sweeped"]
[connection signal="figure_moved" from="ActiveFigure" to="." method="_on_ActiveFigure_figure_moved"]
[connection signal="reset" from="ActiveFigure" to="." method="_on_ActiveFigure_reset"]
